--- a/accounts/templates/user_generic.html
+++ b/accounts/templates/user_generic.html
@@ -35,7 +35,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-
+                    <a class="nav-link" href="{% url 'task_list_approval_pending' %}">Tasks list
+                    </a>
                     <a class="nav-link" href="{% url 'user_list' %}">User list</a>
                     <a class="nav-link" href="{% url 'user_create' %}">Add new user</a>
                     <a class="nav-link" href="{% url 'bulk_upload' %}">Bulk upload users</a>
