--- a/accounts/templates/accounts/department_list.html
+++ b/accounts/templates/accounts/department_list.html
@@ -3,17 +3,16 @@
 {% load django_tables2 %}
 {% load django_bootstrap5 %}
 {% block content %}
-<div class="container-fluid">
-    <h2>Users list</h2>
+<div class="container mt-5">
+    <h2>Department list</h2>
     {% render_table table %}
 </div>
 
 {% endblock content %}
 {% block scripts %}
 {{ block.super }}
-<script>new DataTable('#UserTable', {
-
-        order: [[2, 'asc'], [1, 'asc']],
+<script>new DataTable('#DepartmentTable', {
+        // order: [[2, 'desc']],
     });</script>
 
 {% endblock scripts %}
