--- a/compliance/templates/compliance/task_table.html
+++ b/compliance/templates/compliance/task_table.html
@@ -23,6 +23,11 @@
 {% block scripts %}
 {{ block.super }}
 <script>new DataTable('#templateTable', {
+        layout: {
+            topStart: {
+                buttons: ['copy', 'csv', 'excel', 'pdf']
+            },
+        },
         order: [[3, 'desc']]
     });</script>
 
