--- a/compliance/templates/compliance/public_holiday_list.html
+++ b/compliance/templates/compliance/public_holiday_list.html
@@ -7,14 +7,25 @@
 
     {% render_table table %}
 
-
 </div>
 {% endblock content %}
 
 {% block scripts %}
 {{ block.super }}
-<script>new DataTable('#templateTable', {
+<script>
+    new DataTable('#templateTable', {
+        layout: {
+            topStart: {
+                buttons: [
+                    'copy',
+                    'csv',
+                    'excel',
+                ]
+            }
+        },
         order: [[3, 'desc']]
-    });</script>
+    });
+
+</script>
 
 {% endblock scripts %}
