--- a/compliance/templates/compliance/task_approval_list.html
+++ b/compliance/templates/compliance/task_approval_list.html
@@ -35,6 +35,11 @@
 {% block scripts %}
 {{ block.super }}
 <script>new DataTable('#templateTable', {
+        layout: {
+            topStart: {
+                buttons: ['copy', 'csv', 'excel', 'pdf']
+            },
+        },
         order: [[3, 'desc']]
     });</script>
 
