Accounts: Update list templates to have export buttons

--- a/accounts/templates/accounts/department_list.html
+++ b/accounts/templates/accounts/department_list.html
@@ -12,7 +12,11 @@
 {% block scripts %}
 {{ block.super }}
 <script>new DataTable('#DepartmentTable', {
-        // order: [[2, 'desc']],
+        layout: {
+            topStart: {
+                buttons: ['copy', 'csv', 'excel', 'pdf']
+            },
+        },
     });</script>
 
 {% endblock scripts %}
