--- a/compliance/templates/base_generic.html
+++ b/compliance/templates/base_generic.html
@@ -35,7 +35,8 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     {% with url_name=request.resolver_match.url_name filter_val=request.resolver_match.kwargs.filter %}
-                    {% if request.user.is_authenticated and request.user.user_type in "staff admin" %}
+                    {% if request.user.is_authenticated and request.user.user_type in "viewer admin" %}
+                    {% if request.user.is_authenticated and request.user.user_type in "admin" %}
                     <a class="nav-link" href="{% url 'user_list' %}">User accounts
                     </a>
                     <li class="nav-item dropdown">
@@ -52,6 +53,8 @@
                             </li>
                         </ul>
                     </li>
+                    {% endif %}
+
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle {% if url_name == 'template_list' or url_name == 'template_add' %}active{% endif %}"
                             href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -59,13 +62,17 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{% url 'template_list' %}">Templates list</a></li>
+                            {% if request.user.is_authenticated and request.user.user_type in "admin" %}
                             <li><a class="dropdown-item" href="{% url 'template_add' %}">Add new template</a></li>
+                            {% endif %}
                         </ul>
                     </li>
 
+                    {% if request.user.is_authenticated and request.user.user_type in "admin" %}
                     <a class="nav-link {% if url_name == 'task_add' %}active{% endif %}" href="{% url 'task_add' %}">Add
                         adhoc item
                     </a>
+                    {% endif %}
                     {% endif %}
                     <a class="nav-link {% if url_name == 'task_list_submitted' or url_name == 'task_list_filtered_recurrence_submitted' %}active{% endif %}"
                         href=" {% url 'task_list_submitted' %}">Submitted items
@@ -83,7 +90,7 @@
                     <a class="nav-link {% if url_name == 'task_list_revision' or url_name == 'task_list_filtered_recurrence_revision' %}active{% endif %}"
                         href="{% url 'task_list_revision' %}">To be revised
                         <span class="badge bg-success">{{ revision_count }}</span></a>
-                    {% if request.user.is_authenticated and request.user.user_type in "dept_chief_manager admin" %}
+                    {% if request.user.is_authenticated and request.user.user_type in "dept_agm admin" %}
                     <a class="nav-link {% if url_name == 'task_list_approval_pending' or url_name == 'task_list_filtered_recurrence_approval_pending' %}active{% endif %}"
                         href="{% url 'task_list_approval_pending' %}">Pending for
                         approval
