Compliance: Add legends and fieldsets for template add template

--- a/compliance/templates/template_add.html
+++ b/compliance/templates/template_add.html
@@ -4,11 +4,25 @@
 {% block content %}
 
 <div class="container">
-    <h1 class="title">Add a new template</h1>
+    <h1 class="title mt-3">{{ page_title }}</h1>
 
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
-        {% bootstrap_form form layout="horizontal" %}
+        {% for legend, field_names in form.fieldsets.items %}
+        <fieldset class="border rounded p-3 mb-4">
+            <legend class="float-none w-auto px-2">{{ legend }}</legend>
+
+            <div class="row">
+                {% for field in form.visible_fields %}
+                {% if field.name in field_names %}
+                <div class="col-12 col-md-6">
+                    {% bootstrap_field field %}
+                </div>
+                {% endif %}
+                {% endfor %}
+            </div>
+        </fieldset>
+        {% endfor %}
         <div class="text-center">
             {% bootstrap_button button_type="submit" content="Submit" %}
             {% bootstrap_button button_type="reset" content="Cancel" %}
