--- a/compliance/templates/base_generic.html
+++ b/compliance/templates/base_generic.html
@@ -13,6 +13,7 @@
     {% load static %}
     {% bootstrap_css %}
     <link rel="stylesheet" href="{% static 'DataTables/datatables.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'bootstrap-icons-1.13.1/bootstrap-icons.min.css' %}" />
     <style>
         body {
             zoom: 90%;
