--- a/compliance/templates/base_generic.html
+++ b/compliance/templates/base_generic.html
@@ -3,7 +3,7 @@
 
 <head>
     {% block title %}
-    <title>Compliance Home</title>
+    <title>Compliance ({{ overdue_count }}) </title>
     {% endblock title %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,6 +12,8 @@
     {% load django_bootstrap5 %}
     {% load static %}
     {% bootstrap_css %}
+    <link id="favicon" rel="icon" href="{% static 'favicon.ico' %}" />
+
     <link rel="stylesheet" href="{% static 'DataTables/datatables.min.css' %}" />
     <link rel="stylesheet" href="{% static 'bootstrap-icons-1.13.1/bootstrap-icons.min.css' %}" />
     <style>
