Remove special treatment for halfyearly templates

--- a/compliance/templates/template_add.html
+++ b/compliance/templates/template_add.html
@@ -37,7 +37,7 @@
         const recurInterval = document.getElementById("id_recurring_interval");
         const repeatMonthContainer = document.getElementById("id_repeat_month");
 
-        const allowedValues = ["halfyearly", "annual"];
+        const allowedValues = ["annual"];
 
         function toggleDependentField() {
             const shouldEnable = allowedValues.includes(recurInterval.value);
