--- a/compliance/templates/base_generic.html
+++ b/compliance/templates/base_generic.html
@@ -3,7 +3,7 @@
 
 <head>
     {% block title %}
-    <title>Compliance ({{ overdue_count }}) </title>
+    <title>Compliance</title>
     {% endblock title %}
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
