Add pageLength menu to datatable templates

--- a/compliance/templates/compliance/public_holiday_list.html
+++ b/compliance/templates/compliance/public_holiday_list.html
@@ -15,6 +15,7 @@
 <script>
     new DataTable('#templateTable', {
         layout: {
+            top1start: 'pageLength',
             topStart: {
                 buttons: [
                     'copy',
