--- a/compliance/templates/compliance/template_table.html
+++ b/compliance/templates/compliance/template_table.html
@@ -13,6 +13,7 @@
 <script>
     new DataTable('#templateTable', {
         layout: {
+            top1start: 'pageLength',
             topStart: {
                 buttons: ['copy', 'csv', 'excel', 'pdf']
             },
