Add pageLength menu and disable pagination for user accounts templates

--- a/accounts/templates/accounts/department_list.html
+++ b/accounts/templates/accounts/department_list.html
@@ -13,6 +13,7 @@
 {{ block.super }}
 <script>new DataTable('#DepartmentTable', {
         layout: {
+            top1start: 'pageLength',
             topStart: {
                 buttons: ['copy', 'csv', 'excel', 'pdf']
             },
