--- a/accounts/templates/accounts/list.html
+++ b/accounts/templates/accounts/list.html
@@ -13,6 +13,7 @@
 {{ block.super }}
 <script>new DataTable('#UserTable', {
         layout: {
+            top1start: 'pageLength',
             topStart: {
                 buttons: ['copy', 'csv', 'excel', 'pdf']
             },
