--- a/compliance/templates/partials/partial_task_list.html
+++ b/compliance/templates/partials/partial_task_list.html
@@ -1,4 +1,5 @@
 {% load render_table from django_tables2 %}
+{% load custom_filters %}
 
 <div class="container-fluid mt-4">
     <ul class="nav nav-tabs mb-4">
@@ -9,7 +10,7 @@
          {% else %}
          {% url recurrence_url_name recurrence=recurrence %}
          {% endif %}">
-                {{ recurrence|capfirst }}
+                {{ recurrence|capfirst|replace:"_| " }}
             </a>
         </li>
         {% endfor %}
